--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <script type="text/javascript" src="/bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="/bower_components/less.js/dist/less.min.js"></script>
     <script type="text/javascript" src="/bower_components/moment/min/moment.min.js"></script>
+    <script type="text/javascript" src="/trender.js"></script>
 </head>
 <body>
     <div id="canvas">
-        <b>dkjf</b>
     </div>
 </body>
 </html>
